Fix checkbox text overflow & two links
Squashed commit of the following:

commit 975fd3dd698543ab9d8312c16a02547126945937
Author: Rafael Espinoza <rafael@rafaelespinoza.com>
Date:   Sat Mar 19 19:11:56 2016 -0700

    Wrap a register link around icon

commit d805620c95a010c437385501c1c6668068c9718d
Author: Rafael Espinoza <rafael@rafaelespinoza.com>
Date:   Sat Mar 19 19:07:42 2016 -0700

    Cut off long category names for company categories check boxes

commit 4dcc52abedb97268bf58656abfaef743cc8d492f
Author: Rafael Espinoza <rafael@rafaelespinoza.com>
Date:   Sat Mar 19 18:36:24 2016 -0700

    Remove old link from categories#show view

--- a/app/assets/stylesheets/companies.scss
+++ b/app/assets/stylesheets/companies.scss
@@ -8,9 +8,12 @@ form.new_company, form.edit_company {
     padding-left: 1rem;
 
     li {
+      width: 12em;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
       border: 1px transparent solid;
       display:inline-block;
-      width: 12em;
       margin-bottom: 0.5rem;
 
       input {
